Configure to start-up from ApplicationRunner